Fixed the spacing issue with search results cause by incorrect flex value on align-items property

--- a/app/assets/stylesheets/pages/categories/_show.scss
+++ b/app/assets/stylesheets/pages/categories/_show.scss
@@ -23,8 +23,8 @@ $container-width: 1300px;
 
   .latest-categories {
     display: flex;
-    justify-content: space-between;
-    align-items: space-around;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100%;
     gap: 50px;
     flex-wrap: wrap;
